src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@config "../tailwind.config.js";

@import "tailwindcss";

@layer base {
  :root {
    --font-poppins: Poppins, system-ui, sans-serif;
    --font-nunito: Nunito Sans, sans-serif;
    --animate-wiggle: wiggle 1s ease-in-out infinite;
    --animate-fade-in-down: fade-in-down 0.3s ease-out;
    --animate-fade-out-down: fade-out-down 0.3s ease-out;
    --animate-fade-in-up: fade-in-up 0.3s ease-out;
    --animate-fade-out-up: fade-out-up 0.3s ease-out;
    --shadow-custom: 0px 0px 50px 0px rgb(82 63 105 / 15%);
    --border: #E2E8F0;
    --background: #FFFFFF;
    --foreground: #0C1420;
    --primary: #E11D48;
    --primary-foreground: #FFFFFF;
    --destructive: #CC0033;
    --destructive-foreground: #FAFAFA;
    --muted: #CFD9E5;
    --muted-foreground: #64748B;
    --card: #F1F5F9;
    --card-foreground: #000000;
  }
  .dark {
    --border: #262626;
    --background: #1E293B;
    --foreground: #F2F2F2;
    --muted: #262626;
    --muted-foreground: #A3A3A3;
    --card: #0A0A0A; 
    --card-foreground: #262626;
  }
  [data-theme='violet'] {
    --primary: #6E56CF;
  }
  .dark[data-theme='violet'] {
    --background: #232B3D;
    --foreground: #F6F8FB;
    --card: #060815;
    --card-foreground: #F6F8FB;
    --primary-foreground: #F6F8FB;
    --muted: #232B3D;
    --muted-foreground: #A1A8BF;
    --border: #232B3D;
  }
  [data-theme='red'] {
    --primary: #CC0033;
  }
  .dark[data-theme='red'] {
    --primary-foreground: #FFE5E5;
  }
  [data-theme='blue'] {
    --primary: #2490FF;
  }
  .dark[data-theme='blue'] {
    --background: #1E293B; 
    --foreground: #F8FAFC;
    --card: #0D1117; 
    --card-foreground: #F8FAFC;
    --primary-foreground: #0F1729;
    --muted: #1E293B;
    --muted-foreground: #94A3B8;
    --border: #1E293B;
  }
  [data-theme='orange'] {
    --primary: #EA580C;
  }
  .dark[data-theme='orange'] {
    --background: #292524; 
    --foreground: #FAFAF9;
    --card: #0C0A09; 
    --card-foreground: #FAFAF9;
    --primary-foreground: #FAFAF9;
    --muted: #292524;
    --muted-foreground: #A8A29E;
    --border: #292524;
  }
  [data-theme='yellow'] {
    --primary: #FACC15;
  }
  .dark[data-theme='yellow'] {
    --background: #292524;
    --foreground: #FAFAF9;
    --card: #0C0A09;
    --card-foreground: #FAFAF9;
    --primary: #FACC15;
    --primary-foreground: #422006;
    --muted: #292524;
    --muted-foreground: #A8A29E;
    --border: #292524;
  }
  [data-theme='green'] {
    --primary: #22C55E;
  }
  .dark[data-theme='green'] {
    --primary: #22C55E;
    --primary-foreground: #052E16;
  }
  /* Border compatibility */
  *, ::after, ::before, ::backdrop, ::file-selector-button {
    border-color: var(--border);
  }
  /* Custom Forms */
  [type='text'],
  [type='email'],
  [type='url'],
  [type='password'],
  [type='number'],
  [type='date'],
  [type='datetime-local'],
  [type='month'],
  [type='search'],
  [type='tel'],
  [type='time'],
  [type='week'],
  [multiple],
  textarea,
  select {
    width: 100%;
    border-radius: 0.375rem;
    border-width: 1px;
    border-color: var(--border);
    background-color: var(--background);
    font-size: 0.75rem;
    line-height: 1rem;
    color: var(--foreground);
    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
    z-index: 10;
    outline: none;
  }
  [type='text']:focus,
  [type='email']:focus,
  [type='url']:focus,
  [type='password']:focus,
  [type='number']:focus,
  [type='date']:focus,
  [type='datetime-local']:focus,
  [type='month']:focus,
  [type='search']:focus,
  [type='tel']:focus,
  [type='time']:focus,
  [type='week']:focus,
  textarea:focus,
  select:focus {
    border-color: var(--primary);
    box-shadow: 0 0 0 1px var(--primary);
  }
  input::placeholder,
  textarea::placeholder {
    color: var(--muted-foreground);
  }
  [type='checkbox'],
  [type='radio'] {
    height: 1rem;
    width: 1rem;
    border-radius: 0.125rem;
    border-width: 1px;
    border-color: var(--border);
    background-color: var(--background);
    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
  }
  [type='checkbox']:checked,
  [type='radio']:checked {
    border-color: var(--primary);
    background-color: var(--primary);
  }
  [type='checkbox']:focus,
  [type='radio']:focus {
    box-shadow: 0 0 0 2px var(--primary);
  }
}

@layer utilities {
  .container {
    padding-left: 1rem;
    padding-right: 1rem;
    @media (min-width: 640px) {
      padding-left: 2rem;
      padding-right: 2rem;
    }
    @media (min-width: 1024px) {
      padding-left: 4rem;
      padding-right: 4rem;
    }
    @media (min-width: 1280px) {
      padding-left: 5rem;
      padding-right: 5rem;
    }
    @media (min-width: 1536px) {
      padding-left: 6rem;
      padding-right: 6rem;
    }
  }
  .dropdown-content {
    pointer-events: none;
    transform: scale(0.95);
    opacity: 0;
    transition-duration: 100ms;
    transition-timing-function: ease-in;
  }
  .dropdown:hover > .dropdown-content {
    pointer-events: auto;
    display: block;
    transform: scale(1);
    opacity: 1;
    transition-duration: 200ms;
  }
  .supports-scrollbars-pr-2 {
    padding-right: 0.5rem;
  }
}

/* Keyframes */
@keyframes wiggle {
  0%, 100% {
    transform: rotate(-3deg);
  }
  50% {
    transform: rotate(3deg);
  }
}
@keyframes fade-in-down {
  0% {
    opacity: 0;
    transform: translateY(-10px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}
@keyframes fade-out-down {
  from {
    opacity: 1;
    transform: translateY(0px);
  }
  to {
    opacity: 0;
    transform: translateY(10px);
  }
}
@keyframes fade-in-up {
  0% {
    opacity: 0;
    transform: translateY(10px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}
@keyframes fade-out-up {
  from {
    opacity: 1;
    transform: translateY(0px);
  }
  to {
    opacity: 0;
    transform: translateY(10px);
  }
}

